--- a/index.html
+++ b/index.html
@@ -76,4 +76,6 @@
     IDKit.mount("#world-id-container");
   </script>
 </body>
+  <img src="logo.png" alt="Logo de Bitcoin Second Chance" style="width:150px; margin-bottom: 20px;">
+
 </html>
