--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     IDKit.mount("#world-id-container");
   </script>
 </body>
-  <img src="logo.png" alt="Logo de Bitcoin Second Chance" style="width:150px; margin-bottom: 20px;">
+  <img src="logo_optimized_500kb.png" alt="Logo de Bitcoin Second Chance" style="width:150px; margin-bottom: 20px;">
+
 
 </html>
