--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   </style>
 </head>
 <body>
+  <!-- Logo agregado al inicio -->
+  <img src="logo_optimized_500kb.png" alt="Logo de Bitcoin Second Chance" style="width:150px; margin-bottom: 20px;">
+
   <h1>Bitcoin Second Chance 🌍</h1>
   <p>Verifica tu identidad con World ID y únete a nuestra comunidad.</p>
 
@@ -76,7 +79,4 @@
     IDKit.mount("#world-id-container");
   </script>
 </body>
-  <img src="logo_optimized_500kb.png" alt="Logo de Bitcoin Second Chance" style="width:150px; margin-bottom: 20px;">
-
-
 </html>
