--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      min-height: 100vh;
       text-align: center;
       padding: 20px;
     }
@@ -45,23 +43,86 @@
 
     #world-id-container {
       margin-top: 20px;
+      margin-bottom: 40px;
+    }
+
+    /* 🎰 Estilo Tragaperras */
+    .slot-machine {
+      background: #111;
+      border: 2px solid #444;
+      border-radius: 12px;
+      padding: 20px;
+      max-width: 320px;
+      margin: 2rem auto;
+      box-shadow: 0 0 10px #111;
+    }
+
+    .slots {
+      display: flex;
+      justify-content: space-around;
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    .slot {
+      width: 60px;
+      height: 60px;
+      background: #222;
+      border: 2px solid #666;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .spin-button {
+      background: #ff9900;
+      color: #fff;
+      font-weight: bold;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 1rem;
+      box-shadow: 0 0 10px #ff9900;
+    }
+
+    .message {
+      margin-top: 10px;
+      font-size: 1.2rem;
+      color: #66ffcc;
     }
   </style>
 </head>
 <body>
-  <!-- Logo agregado al inicio -->
+  <!-- Logo -->
   <img src="logo_optimized_500kb.png" alt="Logo de Bitcoin Second Chance" style="width:150px; margin-bottom: 20px;">
 
   <h1>Bitcoin Second Chance 🌍</h1>
   <p>Verifica tu identidad con World ID y únete a nuestra comunidad.</p>
 
+  <!-- World ID -->
   <div id="world-id-container"></div>
 
+  <!-- Telegram -->
   <a href="https://t.me/bitcoinsecondchance" class="telegram-link" target="_blank">
     Únete al Telegram 🚀
   </a>
 
+  <!-- 🎰 Tragaperras -->
+  <div class="slot-machine">
+    <div class="slots">
+      <div class="slot" id="slot1">🍒</div>
+      <div class="slot" id="slot2">🔔</div>
+      <div class="slot" id="slot3">🪙</div>
+    </div>
+    <button class="spin-button" onclick="spinSlots()">🎰 Girar</button>
+    <div class="message" id="slot-message"></div>
+  </div>
+
+  <!-- Scripts -->
   <script>
+    // World ID init
     window.IDKit.init({
       app_id: "bitcoinerssecondchance",
       action: "bitcoinerssecondchance",
@@ -77,6 +138,29 @@
     });
 
     IDKit.mount("#world-id-container");
+
+    // 🎰 Lógica de la tragaperras
+    const symbols = ["🍒", "🔔", "🪙", "💎"];
+    function spinSlots() {
+      const slot1 = document.getElementById("slot1");
+      const slot2 = document.getElementById("slot2");
+      const slot3 = document.getElementById("slot3");
+      const msg = document.getElementById("slot-message");
+
+      const s1 = symbols[Math.floor(Math.random() * symbols.length)];
+      const s2 = symbols[Math.floor(Math.random() * symbols.length)];
+      const s3 = symbols[Math.floor(Math.random() * symbols.length)];
+
+      slot1.textContent = s1;
+      slot2.textContent = s2;
+      slot3.textContent = s3;
+
+      if (s1 === s2 && s2 === s3) {
+        msg.textContent = "🎉 ¡Ganaste 1 punto!";
+      } else {
+        msg.textContent = "😅 Intenta de nuevo...";
+      }
+    }
   </script>
 </body>
 </html>
