--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: start;
+      min-height: 100vh;
       text-align: center;
       padding: 20px;
     }
@@ -43,86 +45,93 @@
 
     #world-id-container {
       margin-top: 20px;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
     }
 
-    /* 🎰 Estilo Tragaperras */
-    .slot-machine {
-      background: #111;
-      border: 2px solid #444;
-      border-radius: 12px;
-      padding: 20px;
-      max-width: 320px;
-      margin: 2rem auto;
-      box-shadow: 0 0 10px #111;
+    /* Tragaperras */
+    .slot-container {
+      margin-top: 2rem;
     }
 
     .slots {
       display: flex;
-      justify-content: space-around;
-      font-size: 2.5rem;
-      margin-bottom: 20px;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 1rem;
     }
 
     .slot {
-      width: 60px;
-      height: 60px;
-      background: #222;
-      border: 2px solid #666;
-      border-radius: 10px;
+      font-size: 3rem;
+      background: #111;
+      padding: 20px;
+      width: 80px;
+      height: 80px;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      border: 2px solid #ff66cc;
+      border-radius: 10px;
     }
 
     .spin-button {
-      background: #ff9900;
-      color: #fff;
-      font-weight: bold;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
+      padding: 12px 24px;
       font-size: 1rem;
-      box-shadow: 0 0 10px #ff9900;
+      background: #ff66cc;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
     }
 
-    .message {
-      margin-top: 10px;
+    .result {
+      margin-top: 1rem;
       font-size: 1.2rem;
       color: #66ffcc;
+    }
+
+    .puf-button {
+      margin-top: 40px;
+      display: inline-block;
+      background: #00e676;
+      color: #000;
+      padding: 14px 28px;
+      border-radius: 10px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 0 10px #00e676;
     }
   </style>
 </head>
 <body>
-  <!-- Logo -->
   <img src="logo_optimized_500kb.png" alt="Logo de Bitcoin Second Chance" style="width:150px; margin-bottom: 20px;">
 
   <h1>Bitcoin Second Chance 🌍</h1>
   <p>Verifica tu identidad con World ID y únete a nuestra comunidad.</p>
 
-  <!-- World ID -->
   <div id="world-id-container"></div>
 
-  <!-- Telegram -->
-  <a href="https://t.me/bitcoinsecondchance" class="telegram-link" target="_blank">
-    Únete al Telegram 🚀
-  </a>
+  <a href="https://t.me/bitcoinsecondchance" class="telegram-link" target="_blank">Únete al Telegram 🚀</a>
 
-  <!-- 🎰 Tragaperras -->
-  <div class="slot-machine">
+  <!-- Juego de Tragaperras -->
+  <div class="slot-container">
+    <h2 style="color:#ff66cc">🎰 Tragaperras Bitcoin</h2>
     <div class="slots">
-      <div class="slot" id="slot1">🍒</div>
-      <div class="slot" id="slot2">🔔</div>
-      <div class="slot" id="slot3">🪙</div>
+      <div id="slot1" class="slot">❓</div>
+      <div id="slot2" class="slot">❓</div>
+      <div id="slot3" class="slot">❓</div>
     </div>
-    <button class="spin-button" onclick="spinSlots()">🎰 Girar</button>
-    <div class="message" id="slot-message"></div>
+    <button class="spin-button" onclick="spin()">🎲 Girar</button>
+    <div id="result" class="result"></div>
   </div>
 
-  <!-- Scripts -->
+  <!-- Enlace a PUF -->
+  <a href="https://worldcoin.org/mini-app?app_id=app_15daccf5b7d4ec9b7dbba044a8fdeab5&app_mode=mini-app" 
+     target="_blank" class="puf-button">
+    🌍 Adquiere más Bitcoin Second Chance
+  </a>
+
   <script>
-    // World ID init
     window.IDKit.init({
       app_id: "bitcoinerssecondchance",
       action: "bitcoinerssecondchance",
@@ -139,26 +148,37 @@
 
     IDKit.mount("#world-id-container");
 
-    // 🎰 Lógica de la tragaperras
-    const symbols = ["🍒", "🔔", "🪙", "💎"];
-    function spinSlots() {
-      const slot1 = document.getElementById("slot1");
-      const slot2 = document.getElementById("slot2");
-      const slot3 = document.getElementById("slot3");
-      const msg = document.getElementById("slot-message");
+    const symbols = ["🍒", "🪙", "🔔", "💎", "⭐"];
+    function getRandomSymbol() {
+      return symbols[Math.floor(Math.random() * symbols.length)];
+    }
 
-      const s1 = symbols[Math.floor(Math.random() * symbols.length)];
-      const s2 = symbols[Math.floor(Math.random() * symbols.length)];
-      const s3 = symbols[Math.floor(Math.random() * symbols.length)];
+    function spin() {
+      let count = 0;
+      let interval = setInterval(() => {
+        document.getElementById("slot1").textContent = getRandomSymbol();
+        document.getElementById("slot2").textContent = getRandomSymbol();
+        document.getElementById("slot3").textContent = getRandomSymbol();
+        count++;
+        if (count > 15) {
+          clearInterval(interval);
+          checkWin();
+        }
+      }, 100);
+    }
 
-      slot1.textContent = s1;
-      slot2.textContent = s2;
-      slot3.textContent = s3;
+    function checkWin() {
+      const s1 = document.getElementById("slot1").textContent;
+      const s2 = document.getElementById("slot2").textContent;
+      const s3 = document.getElementById("slot3").textContent;
+      const result = document.getElementById("result");
 
       if (s1 === s2 && s2 === s3) {
-        msg.textContent = "🎉 ¡Ganaste 1 punto!";
+        result.textContent = "🎉 ¡Has ganado 10 puntos!";
+      } else if (s1 === s2 || s2 === s3 || s1 === s3) {
+        result.textContent = "👏 ¡Casi! Te llevas 1 punto.";
       } else {
-        msg.textContent = "😅 Intenta de nuevo...";
+        result.textContent = "💨 Intenta de nuevo.";
       }
     }
   </script>
