--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bitcoin Second Chance 🌍</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bitcoin Second Chance - Memoria</title>
   <script src="https://cdn.worldcoin.org/idkit/v1.1.0/idkit.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -15,8 +15,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: start;
-      min-height: 100vh;
       text-align: center;
       padding: 20px;
     }
@@ -26,72 +24,50 @@
       margin-bottom: 1rem;
     }
 
-    p {
-      font-size: 1.1rem;
-      margin-bottom: 2rem;
-      color: #ccc;
-    }
-
     .telegram-link {
-      display: inline-block;
       background: #0088cc;
       color: #fff;
       padding: 12px 24px;
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
-      margin-top: 2rem;
+      margin: 20px 0;
     }
 
-    #world-id-container {
-      margin-top: 20px;
-      margin-bottom: 50px;
-    }
-
-    /* Tragaperras */
-    .slot-container {
-      margin-top: 2rem;
-    }
-
-    .slots {
-      display: flex;
+    #game-board {
+      display: grid;
+      grid-template-columns: repeat(4, 80px);
+      gap: 15px;
       justify-content: center;
-      gap: 20px;
-      margin-bottom: 1rem;
+      margin-top: 30px;
     }
 
-    .slot {
-      font-size: 3rem;
-      background: #111;
-      padding: 20px;
+    .card {
       width: 80px;
       height: 80px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background-color: #222;
       border: 2px solid #ff66cc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2rem;
+      cursor: pointer;
       border-radius: 10px;
+      transition: background 0.3s;
     }
 
-    .spin-button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background: #ff66cc;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      cursor: pointer;
-      font-weight: bold;
+    .card.flipped {
+      background-color: #333;
     }
 
     .result {
-      margin-top: 1rem;
+      margin-top: 20px;
       font-size: 1.2rem;
       color: #66ffcc;
     }
 
     .puf-button {
-      margin-top: 40px;
+      margin-top: 30px;
       display: inline-block;
       background: #00e676;
       color: #000;
@@ -104,28 +80,16 @@
   </style>
 </head>
 <body>
-  <img src="logo_optimized_500kb.png" alt="Logo de Bitcoin Second Chance" style="width:150px; margin-bottom: 20px;">
-
   <h1>Bitcoin Second Chance 🌍</h1>
-  <p>Verifica tu identidad con World ID y únete a nuestra comunidad.</p>
+  <p>Verifica tu identidad con World ID y juega al memorama Cococity 🧠</p>
 
   <div id="world-id-container"></div>
 
   <a href="https://t.me/bitcoinsecondchance" class="telegram-link" target="_blank">Únete al Telegram 🚀</a>
 
-  <!-- Juego de Tragaperras -->
-  <div class="slot-container">
-    <h2 style="color:#ff66cc">🎰 Tragaperras Bitcoin</h2>
-    <div class="slots">
-      <div id="slot1" class="slot">❓</div>
-      <div id="slot2" class="slot">❓</div>
-      <div id="slot3" class="slot">❓</div>
-    </div>
-    <button class="spin-button" onclick="spin()">🎲 Girar</button>
-    <div id="result" class="result"></div>
-  </div>
+  <div id="game-board"></div>
+  <div id="message" class="result"></div>
 
-  <!-- Enlace a PUF -->
   <a href="https://worldcoin.org/mini-app?app_id=app_15daccf5b7d4ec9b7dbba044a8fdeab5&app_mode=mini-app" 
      target="_blank" class="puf-button">
     🌍 Adquiere más Bitcoin Second Chance
@@ -137,7 +101,7 @@
       action: "bitcoinerssecondchance",
       signal: "hola",
       onSuccess: (proof) => {
-        console.log("Verificación completada:", proof);
+        console.log("Verificado con ", proof);
         alert("✅ ¡Verificado con éxito!");
       },
       onError: (error) => {
@@ -145,42 +109,62 @@
         alert("❌ Hubo un error al verificar.");
       },
     });
-
     IDKit.mount("#world-id-container");
 
-    const symbols = ["🍒", "🪙", "🔔", "💎", "⭐"];
-    function getRandomSymbol() {
-      return symbols[Math.floor(Math.random() * symbols.length)];
-    }
+    const icons = ["🍒", "🪙", "🔔", "💎", "⭐", "🍀"];
+    let cards = [...icons, ...icons];
+    let flippedCards = [];
+    let matched = 0;
 
-    function spin() {
-      let count = 0;
-      let interval = setInterval(() => {
-        document.getElementById("slot1").textContent = getRandomSymbol();
-        document.getElementById("slot2").textContent = getRandomSymbol();
-        document.getElementById("slot3").textContent = getRandomSymbol();
-        count++;
-        if (count > 15) {
-          clearInterval(interval);
-          checkWin();
-        }
-      }, 100);
-    }
-
-    function checkWin() {
-      const s1 = document.getElementById("slot1").textContent;
-      const s2 = document.getElementById("slot2").textContent;
-      const s3 = document.getElementById("slot3").textContent;
-      const result = document.getElementById("result");
-
-      if (s1 === s2 && s2 === s3) {
-        result.textContent = "🎉 ¡Has ganado 10 puntos!";
-      } else if (s1 === s2 || s2 === s3 || s1 === s3) {
-        result.textContent = "👏 ¡Casi! Te llevas 1 punto.";
-      } else {
-        result.textContent = "💨 Intenta de nuevo.";
+    function shuffle(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
       }
     }
+
+    function createBoard() {
+      const board = document.getElementById("game-board");
+      shuffle(cards);
+      cards.forEach((icon, index) => {
+        const card = document.createElement("div");
+        card.classList.add("card");
+        card.dataset.icon = icon;
+        card.dataset.index = index;
+        card.innerHTML = "";
+        card.addEventListener("click", handleFlip);
+        board.appendChild(card);
+      });
+    }
+
+    function handleFlip(e) {
+      const card = e.currentTarget;
+      if (flippedCards.length >= 2 || card.classList.contains("flipped")) return;
+      card.classList.add("flipped");
+      card.innerHTML = card.dataset.icon;
+      flippedCards.push(card);
+      if (flippedCards.length === 2) {
+        setTimeout(checkMatch, 800);
+      }
+    }
+
+    function checkMatch() {
+      const [card1, card2] = flippedCards;
+      if (card1.dataset.icon === card2.dataset.icon) {
+        matched++;
+        if (matched === icons.length) {
+          document.getElementById("message").textContent = "🎉 ¡Has encontrado todas las parejas!";
+        }
+      } else {
+        card1.classList.remove("flipped");
+        card2.classList.remove("flipped");
+        card1.innerHTML = "";
+        card2.innerHTML = "";
+      }
+      flippedCards = [];
+    }
+
+    createBoard();
   </script>
 </body>
 </html>
