--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
 
   <!-- Enlace PUF -->
-  <a href="https://worldcoin.org/mini-app?app_id=app_15daccf5b7d4ec9b7dbba044a8fdeab5&app_mode=mini-app" 
+  <a href="https://worldcoin.org/mini-app?app_id=app_3efe44260e44d2d9470e655ce73c2a44&app_mode=mini-app" 
      target="_blank" class="puf-button">
     🌍 Adquiere más Bitcoin Second Chance
   </a>
@@ -110,7 +110,7 @@
   <script>
     // Inicializar World ID
     window.IDKit?.init({
-      app_id: "bitcoinerssecondchance",
+      app_id: "app_3efe44260e44d2d9470e655ce73c2a44",
       action: "bitcoinerssecondchance",
       signal: "hola",
       onSuccess: (proof) => {
@@ -127,7 +127,6 @@
 
     // Lógica de dados
     let score = 0;
-
     function rollDice() {
       const die1 = Math.floor(Math.random() * 6) + 1;
       const die2 = Math.floor(Math.random() * 6) + 1;
