--- a/index.html
+++ b/index.html
@@ -133,21 +133,22 @@
 
     IDKit?.mount("#world-id-container");
 
-    // Juego de dados
+    // Juego de dados funcional
     let score = 0;
-
     document.addEventListener("DOMContentLoaded", () => {
       const rollBtn = document.getElementById("rollBtn");
+      const dice = document.getElementById("dice");
+      const result = document.getElementById("result");
+      const scoreDisplay = document.getElementById("score");
+      const winMessage = document.getElementById("winMessage");
+
       rollBtn.addEventListener("click", () => {
         const die1 = Math.floor(Math.random() * 6) + 1;
         const die2 = Math.floor(Math.random() * 6) + 1;
         const sum = die1 + die2;
 
-        const diceSymbols = ["⚀","⚁","⚂","⚃","⚄","⚅"];
-        document.getElementById("dice").textContent = `${diceSymbols[die1 - 1]} ${diceSymbols[die2 - 1]}`;
-
-        const result = document.getElementById("result");
-        const winMessage = document.getElementById("winMessage");
+        const symbols = ["⚀", "⚁", "⚂", "⚃", "⚄", "⚅"];
+        dice.textContent = `${symbols[die1 - 1]} ${symbols[die2 - 1]}`;
 
         if (sum === 7) {
           score += 10;
@@ -158,7 +159,7 @@
           winMessage.style.display = "none";
         }
 
-        document.getElementById("score").textContent = score;
+        scoreDisplay.textContent = score;
       });
     });
   </script>
